mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_invalid_float.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Invalid float literal: 1.2.3
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_invalid_float.mux:2:10
   |
 2 | auto x = 1.2.3
   |          ^^^^^
   |
= help: A number can only have one decimal point. Use separate expressions for chained field access.
